commit api para hacer
TO DO Una página para ver los productos que tengan un stock menor a su límite configurado.

--- a/front trabajo integrador/ActualizarStock.html
+++ b/front trabajo integrador/ActualizarStock.html
@@ -26,7 +26,7 @@
         </header>
     </div>
     <div class="main-form">
-        <form action="Formularios.js" method="put"   id="formulario-actualizar-stock">
+        <form action="js/ActualizarStock.js" method="put"   id="formulario-actualizar-stock">
 
             <h3>ACTUALIZACION DE STOCK</h3>
             <input type="number" id="id" name="id" required placeholder="ID">
@@ -36,7 +36,7 @@
         </form>
     </div>
   
-    <script src="Formularios.js"></script>
+    <script src="js/ActualizarStock.js"></script>
 
     <footer>
         <p> &copy; UCSE 2024 </p>
