--- a/front trabajo integrador/NuevaCompra.html
+++ b/front trabajo integrador/NuevaCompra.html
@@ -26,7 +26,7 @@
     </div>
     <div class="main-form">
 
-        <form action="agregarcompra.js" method="POST" id="compraForm">
+        <form action="js/agregarcompra.js" method="POST" id="compraForm">
             <h3>NUEVA COMPRA</h3>
             <input type="number" id="id" name="id" required placeholder="ID producto">
             <input type="number" id="cantidad" name="cantidad" required placeholder="Cantidad">     
@@ -48,7 +48,7 @@
             
         </tbody>
     </table>
-    <script src="agregarcompra.js"></script>
+    <script src="js/agregarcompra.js"></script>
 
 <footer>
     <p> &copy; UCSE 2024 </p>
