--- a/front trabajo integrador/index.html
+++ b/front trabajo integrador/index.html
@@ -38,7 +38,7 @@
             <button class="boton"><a href="ActualizarStock.html">Actualizar Stock</button></a>
         </div>
         <div class="box">
-            <button class="boton"><a href="NuevaCompra.html">Nueva Compra</button></a>
+            <button class="boton"><a href="OpcionesCompra.html">Compras</button></a>
         </div>
 
     </div>
