--- a/front trabajo integrador/Cliente.html
+++ b/front trabajo integrador/Cliente.html
@@ -46,7 +46,7 @@
         </form>
 
     </div>
-    <table border="1">
+   <!-- <table border="1">
         <thead>
             <tr>
                 <th>DNI</th>
@@ -61,7 +61,7 @@
         <tbody id="TablaClientes">
             
         </tbody>
-    </table>
+    </table> -->
 
 
     <footer>
