--- a/front trabajo integrador/NuevaCompra.html
+++ b/front trabajo integrador/NuevaCompra.html
@@ -29,7 +29,8 @@
         <form action="js/agregarcompra.js" method="POST" id="compraForm">
             <h3>NUEVA COMPRA</h3>
             <input type="number" id="id" name="id" required placeholder="ID producto">
-            <input type="number" id="cantidad" name="cantidad" required placeholder="Cantidad">     
+            <input type="number" id="cantidad" name="cantidad" required placeholder="Cantidad">  
+            <input type="number" id="dni" name="dni" required placeholder="DNI Cliente">   
             <label for="fecha_entrega">Fecha de Entrega Solicitada:</label>
             <input type="date" id="fecha_entrega" name="fecha_entrega" required placeholder="Ingrese la fecha de entrega solicitada">
             <input type="submit" value="Registrar Compra" class="btn-submit">
