--- a/front trabajo integrador/ActualizarStock.html
+++ b/front trabajo integrador/ActualizarStock.html
@@ -27,7 +27,7 @@
     </div>
     <div class="main-form">
         <form action="js/ActualizarStock.js" method="put"   id="formulario-actualizar-stock">
-
+            <button class="boton-back"><a href="index.html"><</button></a>
             <h3>ACTUALIZACION DE STOCK</h3>
             <input type="number" id="id" name="id" required placeholder="ID">
             <input type="number" id="stock" name="stock" required placeholder="Cantidad Ingresada">
