--- a/front trabajo integrador/VerStock.html
+++ b/front trabajo integrador/VerStock.html
@@ -25,9 +25,8 @@
         </header>
     </div>
     <div class="main-form">
-
-
         <form action="js/VerStock.js" method="GET" id="VerStock">
+            <button class="boton-back"><a href="index.html"><</button></a>
             <h3>CANTIDAD DE STOCK</h3>
             <label for="limiteStock">Ingrese el límite de stock:</label>
             <input type="number" id="limiteStock" placeholder="Límite de stock">
