--- a/front trabajo integrador/index.html
+++ b/front trabajo integrador/index.html
@@ -10,8 +10,8 @@
     <title>Trabajo Integrador</title>
 </head>
 
-<body>
-
+<body style="background-image: url('https://cdn.wallpapersafari.com/31/74/oDYvjf.jpg');
+    background-size: cover;">
     <div class="contenedor">
         <header>
             <div class="logo">
@@ -43,11 +43,12 @@
 
     </div>
 
-
-
     <footer>
-        <p> &copy; mercado privado 2024 </p>
+        <p> &copy; UCSE 2024 </p>
+        
     </footer>
+
+    
 
 </body>
 
