--- a/front trabajo integrador/Cliente.html
+++ b/front trabajo integrador/Cliente.html
@@ -26,22 +26,25 @@
         </header>
     </div>
     <div class="main-form">
-        <form action="js/AgregarCliente.js" method="POST" id="clienteForm">
-            <h3>CLIENTES</h3>
-            <input type="number" id="dni" name="dni" required placeholder="DNI Cliente">
-            <input type="text" id="nombre" name="nombre" required placeholder="Nombre Cliente">
-            <input type="text" id="apellido" name="apellido" required placeholder="Apellido Cliente">
-            <input type="email" id="email" name="email" required placeholder="Email">
-            <input type="number" id="telefono" name="telefono" required placeholder="Telefono Cliente">
-
-            <input type="number" id="latitud" name="latitud" required placeholder="Latitud">
-            <input type="number" id="longitud" name="longitud" required placeholder="Longitud">
-
-            <label for="fecha_nacimiento">Fecha de Nacimiento:</label>
-            <input type="date" id="fecha_nacimiento" name="fecha_nacimiento">
-
-            <input type="submit" value="Agregar Cliente" class="btn-submit">
-        </form>
+        
+        <table border= "1">
+            <h2>Clientes Registrados</h2>
+            <thead>
+                <tr>
+                    <th>DNI</th>
+                    <th>Nombre</th>
+                    <th>Apellido</th>
+                    <th>Email</th>
+                    <th>Telefono</th>
+                    <th>Latitud</th>
+                    <th>Longitud</th>
+                    <th>Fecha de Nacimiento</th>
+                </tr>
+            </thead>
+            <tbody id="tabla-clientes">
+            </tbody>
+           
+        </table>
     </div>
     <footer>
         <p> &copy; UCSE 2024 </p>
