--- a/front trabajo integrador/VerStock.html
+++ b/front trabajo integrador/VerStock.html
@@ -30,7 +30,7 @@
             <h3>CANTIDAD DE STOCK</h3>
             <label for="limiteStock">Ingrese el límite de stock:</label>
             <input type="number" id="limiteStock" placeholder="Límite de stock">
-            <input type="submit" value="Obtener datos">
+            <input type="submit" value="Ver Stock">
         </form>
             <table border="1">
                 <thead>
