--- a/front trabajo integrador/AsignacionViaje.html
+++ b/front trabajo integrador/AsignacionViaje.html
@@ -33,7 +33,7 @@
                 <input type="date" id="fecha-desde" name="fecha" required>
                 <label for="fecha">Fecha Hasta:</label>
                 <input type="date" id="fecha-hasta" name="fecha" required placeholder="Fecha Hasta">
-            <input type="submit" value="Obtener datos">
+            <input type="submit" value="Asignar viaje">
         </form>
     </div>
     <script src="js/AsignacionViaje.js"></script>
