--- a/front trabajo integrador/Cliente.html
+++ b/front trabajo integrador/Cliente.html
@@ -1,7 +1,5 @@
-
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,7 +7,6 @@
     <link rel="stylesheet" href="Stylesheet.css">
     <title>Trabajo Integrador</title>
 </head>
-
 <body>
     <div class="contenedor">
         <header>
@@ -49,6 +46,6 @@
     <footer>
         <p> &copy; UCSE 2024 </p>
     </footer>
-    <script src="js/AgregarCliente.js"></script>
+    <script src="js/VerCliente.js"></script>
 </body>
 </html>
